# MeshViewer

./: .gitignore  CMakeLists.txt  README.md  setup.py
scripts/: client.py  server.py
src/: pymesh.cpp
src/api/: bind_api.hpp  bind_mesh.cpp
src/mesh/: Mesh.hpp
